--- a/cliente/src/componentes/admin/cliente.css
+++ b/cliente/src/componentes/admin/cliente.css
@@ -28,51 +28,7 @@ body {
     justify-content: center;
     width: 100%;
 }
-
-nav {
-    width: 100%;
-    height: 140px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-start;
-    top: 0;
-    transition: 0.7s;
-    background-color: #00000042;
-}
-
-nav.bajar_1 {
-    background-color: #00000059;
-    position: fixed;
-    transition: 0.7s;
-    width: 100%;
-    height: 100px;
-    color: black;
-    z-index: 3;
-}
-
-nav a {
-    text-decoration: none;
-    font-size: 20px;
-    margin: 30px;
-    color: #ffffff;
-}
-
-.activa {
-    border-top: 6px solid #e5383b;
-    padding: 2px;
-}
-
-nav li {
-    list-style: none;
-    margin-left: 85px;
-}
-nav li img{
-    width: 60px;
-    height: 60px;
-}
-nav img {
-    width: 120px;
-    height: 120px;
-    margin-left: 45px;
-}
+ .home{
+    width: 75px;
+    height: 75px;
+ }
