--- a/cliente/src/componentes/conocenos/conocenos.css
+++ b/cliente/src/componentes/conocenos/conocenos.css
@@ -5,92 +5,82 @@ body {
     width: 98.60vw;
 }
 
-nav {
-    width: 100%;
-    height: 140px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-start;
-    top: 0;
-    transition: 0.7s;
-    background-color: #00000042;
-}
-
-nav.bajar_1 {
-    background-color: #00000059;
-    position: fixed;
-    transition: 0.7s;
-    width: 100%;
-    height: 100px;
-    color: black;
-    z-index: 3;
-}
-
-nav a {
-    text-decoration: none;
-    font-size: 20px;
-    margin: 30px;
-    color: #ffffff;
-}
-
-.activa {
-    border-top: 6px solid #e5383b;
-    padding: 2px;
-}
-
-nav li {
-    list-style: none;
-    margin-left: 85px;
-}
-
-nav img {
-    width: 120px;
-    height: 120px;
-    padding: 12px;
-}
-
 .caja1 {
     background-image: linear-gradient(rgba(128, 15, 15, 0.288), rgba(128, 15, 15, 0.288)), url('https://th.bing.com/th/id/R.9165abb488f2933905bb31eed94d3d1d?rik=PCqOdl3M9Y%2bJAA&pid=ImgRaw&r=0');
     background-repeat: no-repeat;
     background-size: cover;
     padding: 25px;
     width: 100%;
+    height: 250px;
     display: flex;
     flex-direction: column;
     text-align: center;
     font-size: 20px;
     color: #ffffff;
+    justify-content: center;
+    align-items: center;
+}
+
+.caja1 h2 {
+    font-weight: bold;
+    color: #ad0305;
+    text-shadow: 2px 0px 0px white,
+        0px 2px 0px white,
+        -2px 0px 0px white,
+        0px -2px 0px white;
+    font-size: 35px;
+}
+
+.caja1 h4 {
+
+    max-width: 1500px;
+    text-align: center;
+
 }
 
 .contenedorMVI {
     background-color: #D3D3D3;
     width: 100%;
-    height: 100%;
+    height: 30vw;
     padding: 25px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
+    background-color:  #161a1def;
+    
 }
 
 .contenedorMVI h2 {
+    margin-top: 100px;
     display: flex;
     justify-content: center;
     text-align: end;
+    color: #ad0305;
+    font-weight: bold;
+   
 }
 
-.contenedorMVI p {
+.contenedorMVI h3 {
     display: flex;
     justify-content: center;
     text-align: center;
-    font-size: 20px;
+    max-width: 750px;
+    font-size: 30px;
+    color: white;
+    text-align: center;
+    
 }
 
 .contenedorMVI img {
     border-radius: 3pc;
+    width: 500px;
+    vertical-align: middle;
+}
+.izquieda{
+    max-width: 60%;
 }
 
-footer{
+footer {
     width: 100%;
     height: 100px;
     display: flex;
