--- a/cliente/src/componentes/inicio/inicio.css
+++ b/cliente/src/componentes/inicio/inicio.css
@@ -15,17 +15,19 @@ nav {
     justify-content: flex-start;
     top: 0;
     transition: 0.7s;
-    background-color: #00000042;
+    background-color: black;
+
 }
 
 nav.bajar_1 {
-    background-color: #00000059;
     position: fixed;
     transition: 0.7s;
     width: 100%;
     height: 100px;
     color: black;
     z-index: 3;
+    background-color: rgba(0, 0, 0, 0.233);
+    backdrop-filter: blur(15px);
 }
 
 nav a {
@@ -49,6 +51,7 @@ nav img {
     width: 120px;
     height: 120px;
     padding: 12px;
+    margin-left: 50px;
 }
 
 .caja {
@@ -150,7 +153,13 @@ nav img {
     height: 400px;
     display: flex;
     flex-direction: column;
+    align-items: center;
 
+}
+.tarjeta a{
+    text-decoration: none;
+    color: white;
+    font-size: 20px;
 }
 .tarjeta img{
     width: 100%;
