--- a/cliente/src/componentes/admin/proveedor.css
+++ b/cliente/src/componentes/admin/proveedor.css
@@ -7,12 +7,11 @@ body {
 
 .container{
     width: 100%;
-    align-items: center;
-    justify-content: center;
-    margin-top: 100px;
+    margin-top: 10px;
+    margin-right: 300px;
 }
 .card{
-    width: 80%;
+    width: 100%;
     margin-left: 10%;
 }
 .card-footer{
