--- a/cliente/src/componentes/conocenos/conocenos.css
+++ b/cliente/src/componentes/conocenos/conocenos.css
@@ -11,7 +11,7 @@ body {
     background-size: cover;
     padding: 25px;
     width: 100%;
-    height: 250px;
+    height: auto;
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -41,7 +41,7 @@ body {
 .contenedorMVI {
     background-color: #D3D3D3;
     width: 100%;
-    height: 30vw;
+    height: 800px;
     padding: 25px;
     display: flex;
     justify-content: space-around;
