--- a/cliente/src/componentes/productos/productos.css
+++ b/cliente/src/componentes/productos/productos.css
@@ -220,30 +220,38 @@ header{
 /* Main */
 .container-items{
     margin-bottom: 80px;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
     gap: 20px;
+    width:auto;
+    display: flex;
+    flex-direction: row;
 }
 
 .container-items h1{
     display: flex;
     justify-content: center;
-    align-items: center};
+    align-items: center;
+}
 
 
 .item{
     border-radius: 10px;
+    width:50%;
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
+
 }
 
 .item:hover{
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.20);
 }
 
+
 .item img{
     width: 100%;
-    height: 300px;
+    height: 100%;
     object-fit: cover;
-    border-radius: 10px 10px 0 0;
+    border-radius: 25px;
     transition: all .5s;
 }
 
@@ -252,7 +260,7 @@ header{
 }
 
 .item:hover img{
-    transform: scale(1.2);
+    transform: scale(0.9);
 }
 
 .info-product{
@@ -263,6 +271,7 @@ header{
     text-align: center;
     flex-direction: column;
     gap: 10px;
+    width: 100%;
 }
 
 .price{
@@ -327,8 +336,8 @@ header{
 }
 
 .item_seleccion{
-    width: 100%;
-    height: 100%;
+    width: 400px;
+    height: 550px;
     object-fit: cover;
     border-radius: 10px 10px;
     transition: all .5s;
@@ -370,4 +379,20 @@ footer{
     color: #ffffff;
     background-color: #161A1D;
     border-top: 1px solid #B1A7A6;
+}
+
+.separador_productos{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.separador_productos h1{
+    font-size: 50px;
+    font-weight: bold;
+    align-items: center;
+    justify-content: center;
+}
+.separador_productos hr{
+    width: 100%;
 }
