--- a/cliente/src/componentes/conocenos/conocenos.css
+++ b/cliente/src/componentes/conocenos/conocenos.css
@@ -41,7 +41,7 @@ body {
 .contenedorMVI {
     background-color: #D3D3D3;
     width: 100%;
-    height: 800px;
+    height: 1400px;
     padding: 25px;
     display: flex;
     justify-content: space-around;
@@ -67,7 +67,7 @@ body {
     max-width: 750px;
     font-size: 30px;
     color: white;
-    text-align: center;
+    text-wrap: balance;
     
 }
 
