--- a/cliente/src/componentes/admin/librocont.css
+++ b/cliente/src/componentes/admin/librocont.css
@@ -2,13 +2,14 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     width: 98.60vw;
 }
 
 .container{
     width: 100%;
     margin-top: 10px;
-    margin-right: 300px;
+
 }
 .card{
     width: 100%;
