--- a/cliente/src/componentes/admin/login.css
+++ b/cliente/src/componentes/admin/login.css
@@ -4,10 +4,11 @@ body {
     align-items: center;
     width: 98.60vw;
 }
+
 .contenedor-login{
     width: 100%;
     background-color: #161A1D;
-    height: 570px;
+    height: 80vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -35,6 +36,12 @@ body {
     justify-content: center;
     align-items: center;
 }
+.formulario label{
+    color: #ffffff;
+    font-size: 30px;
+    font-weight: bold;
+    align-self:flex-start;
+}
 footer {
     width: 100%;
     height: 100px;
@@ -44,9 +51,4 @@ footer {
     color: #ffffff;
     background-color: #161A1D;
     border-top: 1px solid #B1A7A6;
-}
-
-footer img {
-    margin-top: -10px;
-    margin-left: 25px;
 }
