--- a/cliente/src/componentes/conocenos/conocenos.css
+++ b/cliente/src/componentes/conocenos/conocenos.css
@@ -14,7 +14,6 @@ body {
     height: auto;
     display: flex;
     flex-direction: column;
-    text-align: center;
     font-size: 20px;
     color: #ffffff;
     justify-content: center;
@@ -29,35 +28,36 @@ body {
         -2px 0px 0px white,
         0px -2px 0px white;
     font-size: 35px;
+    text-align: center;
 }
 
 .caja1 h4 {
 
     max-width: 1500px;
     text-align: center;
-
+    text-align: center;
+    font-size:25px ;
 }
 
 .contenedorMVI {
     background-color: #D3D3D3;
     width: 100%;
-    height: 1400px;
+    height: auto;
     padding: 25px;
     display: flex;
+    flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    background-color:  #161a1def;
+    background-color:  #000000;
     
 }
 
 .contenedorMVI h2 {
-    margin-top: 100px;
     display: flex;
     justify-content: center;
-    text-align: end;
+    text-align: justify;
     color: #ad0305;
     font-weight: bold;
-   
 }
 
 .contenedorMVI h3 {
@@ -67,17 +67,34 @@ body {
     max-width: 750px;
     font-size: 30px;
     color: white;
-    text-wrap: balance;
-    
+    text-align: justify;
 }
 
 .contenedorMVI img {
     border-radius: 3pc;
-    width: 500px;
+    width: 25w;
+    height: 20vw;
     vertical-align: middle;
 }
-.izquieda{
-    max-width: 60%;
+.izquierda{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between; 
+    align-items: center;
+    height: auto;
+    width: 70%;
+    margin-top: 100px;
+}
+
+.derecha{
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    margin-top: 100px;
+    align-items: center;
+    height: auto;
+    width: 70%;
+    margin-bottom: 100px;
 }
 
 footer {
